refactor(dto): 센서 DTO 구조 수정